# moving-base-simulation

./: README.md  testing_motor.py
description/: package.xml
description/urdf/: base.gazebo  base.xacro
gazebo/: CMakeLists.txt  package.xml
gazebo/launch/: turtlebot_world.launch
sketch_2d_simulation/: sketch_2d_simulation.pde
